--- a/index.html
+++ b/index.html
@@ -14,23 +14,6 @@
     <meta name="author" content="Minh D. Nguyen">
     <meta name="robots" content="index, follow">
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Minh D. Nguyen - Computer Science Master's Student">
-    <meta property="og:description"
-        content="Master's student in Computer Science at SJTU, focusing on AI in Software Engineering, GUI agents, and Information Retrieval.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://abcbum.github.io">
-    <meta property="og:image" content="https://abcbum.github.io/minion.jpeg">
-    <meta property="og:site_name" content="Minh D. Nguyen">
-    <meta property="og:locale" content="en_US">
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Minh D. Nguyen - Computer Science Master's Student">
-    <meta name="twitter:description"
-        content="Master's student in Computer Science at SJTU, focusing on AI in Software Engineering, GUI agents, and Information Retrieval.">
-    <meta name="twitter:image" content="https://abcbum.github.io/minion.jpeg">
-
     <!-- Canonical URL -->
     <link rel="canonical" href="https://abcbum.github.io">
 
@@ -39,28 +22,6 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css">
-
-    <!-- Structured Data -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "Person",
-        "name": "Minh D. Nguyen",
-        "url": "https://abcbum.github.io",
-        "image": "https://abcbum.github.io/minion.jpeg",
-        "jobTitle": "Master's Student",
-        "affiliation": {
-            "@type": "Organization",
-            "name": "Shanghai Jiao Tong University"
-        },
-        "knowsAbout": ["Artificial Intelligence", "Software Engineering", "GUI Agents", "Information Retrieval", "Machine Learning"],
-        "sameAs": [
-            "https://scholar.google.com/citations?user=ExRV3kAAAAAJ&hl=en",
-            "https://www.linkedin.com/in/minh-nguyen-936511228/",
-            "https://github.com/abcbum"
-        ]
-    }
-    </script>
 </head>
 
 <body>
@@ -116,6 +77,15 @@
                                 </svg>
                                 GitHub
                             </a>
+                            <a href="https://www.kaggle.com/abcbum" target="_blank" rel="noopener noreferrer">
+                                <svg width="14" height="14" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                                    aria-label="Kaggle">
+                                    <title>Kaggle</title>
+                                    <text x="12" y="12" text-anchor="middle" dominant-baseline="central"
+                                        font-family="Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif"
+                                        font-weight="700" font-size="24" fill="currentColor">k</text>
+                                </svg>
+                                Kaggle </a>
                             <a href="mailto:minh.nguyen@sjtu.edu.cn" target="_blank" rel="noopener noreferrer">
                                 <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2">
@@ -134,7 +104,7 @@
 
         <section id="publications" class="section">
             <h2>Publications</h2>
-            <div style="font-size: 1rem; margin-bottom: 15px;">
+            <div class="publication-note">
                 (*): Co-first Author
             </div>
 
@@ -193,7 +163,7 @@
                 <div class="item-date">2024-2025</div>
                 <div class="item-title">Software Engineer</div>
                 <div class="item-subtitle">Employment Hero</div>
-                <div class="item-description">Worked on automation, workflow features for Australian HR software.</div>
+                <div class="item-description">Worked on automation, workflow features for Australian HRM software.</div>
             </div>
 
             <div class="experience-item">
@@ -210,11 +180,6 @@
         <section id="achievements" class="section">
             <h2>Awards & Certificates</h2>
 
-            <div class="achievement-item">
-                <div class="item-date">2024</div>
-                <div class="item-title">AWS Solutions Architect Associate</div>
-                <div class="item-subtitle">AWS</div>
-            </div>
             <div class="achievement-item">
                 <div class="item-date">2021</div>
                 <div class="item-title">CommonLit Readability Prize Gold Medalist</div>
