update subtitle to include university affiliation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
         <header>
             <h1>Minh D. Nguyen</h1>
-            <div class="subtitle">M.Sc. Computer Science Candidate</div>
+            <div class="subtitle">M.Sc. Computer Science Candidate @ SJTU</div>
         </header>
 
         <nav class="nav-menu">
