--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minh D. Nguyen - Computer Science Master's Student | AI & Software Engineering</title>
+    <title>Minh D. Nguyen</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description"
