--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <section id="introduction" class="section">
             <div class="profile-section">
-                <img src="minion.jpeg" alt="Minh D. Nguyen" class="profile-image">
+                <img src="profile_pic.png" alt="Minh D. Nguyen" class="profile-image">
                 <div class="profile-content">
                     <h2>Introduction</h2>
                     <p>I am a Master's student in Computer Science currently in <a
