--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="item-date">2024-2025</div>
                 <div class="item-title">Software Engineer</div>
                 <div class="item-subtitle">Employment Hero</div>
-                <div class="item-description">Worked on automation, workflow features for Australian HRM software.</div>
+                <div class="item-description">Worked on automation, workflow features, data residency for Australian HRM software.</div>
             </div>
 
             <div class="experience-item">
